# SCiPnet-EXE

./: .gitignore  CMakeLists.txt  build.bat  setup_sfml.bat
src/: main.cpp  resource.rc
